--- a/frontend-angular/src/app/components/list/list.component.html
+++ b/frontend-angular/src/app/components/list/list.component.html
@@ -1,22 +1,22 @@
 <div *ngIf="error">{{error}}</div>
 <div *ngIf="success">{{success}}</div>
     
-<div id="theList">
-  <h2>ToDo List</h2>
-  <hr/>
-  <div class="row">
-    <div class="col-1"><b>ID</b></div>
-    <div class="col-3"><b>TASK</b></div>
-    <div class="col-2"><b>DUE DATE</b></div>
-    <div class="col-1"><b>STATUS</b></div>
-  </div>
-  <div *ngFor="let item of todos">
-    <div class="row">
-      <div class="col-1">{{item.id}}</div>
-      <div class="col-3">{{item.task}}</div>
-      <div class="col-2">{{item.due}}</div>
-      <div class="col-1">{{item.status}}</div>
-      <div class="col-1"><a href="/todo/{{item.id}}">Details&gt;</a></div>
+<div id="theList" [ngClass]="['row']">
+  <div [ngClass]="['col-md-6']">
+    <h4>Todos List</h4>
+    <div [ngClass]="['list-group']" *ngFor="let item of todos">
+      <a [ngClass]="['list-group-item']" (click)="onSelect(item.id)">{{item.task}}</a>
     </div>
+  </div>
+  <div [ngClass]="{'col-md-6':true, 'd-none':selectedTodo.id!=0}" id="todo_hint">
+    <p>Please click on a Todo...</p>
+  </div>
+  <div [ngClass]="{'col-md-6':true, 'd-none':selectedTodo.id==0}" id="todo_details">
+    <h4>Todo</h4>
+    <div><p><b>ID</b>: {{selectedTodo.id}}</p></div>
+    <div><p><b>TASK</b>: {{selectedTodo.task}}</p></div>
+    <div><p><b>DUE DATE</b>: {{selectedTodo.due}}</p></div>
+    <div><p><b>COMPLETED</b>: {{selectedTodo.isdone}}</p></div>
+    <div><a [ngClass]="['btn btn-warning']" href="/todo/{{selectedTodo.id}}">Details</a></div>
   </div>
 </div>
