--- a/frontend-angular/src/app/components/add/add.component.html
+++ b/frontend-angular/src/app/components/add/add.component.html
@@ -3,32 +3,33 @@
 <form [formGroup]="newTodoForm" (ngSubmit)="addTodo()">
     <label for="task_new">Task: </label>
     <input class="form-control" id="task_new" type="text" formControlName="task">
-    <div *ngIf="newTodoForm.value.task.invalid" class="alert">
-      <div *ngIf="newTodoForm.value.task.errors?.required">
+    <div *ngIf="task?.invalid" class="alert alert-danger">
+      <div *ngIf="task?.errors?.required">
         Task is required.
       </div>
-      <div *ngIf="newTodoForm.value.task.errors?.minlength">
+      <div *ngIf="task?.errors?.minlength">
         Task must be at least 5 characters long.
       </div>
-      <div *ngIf="newTodoForm.value.task.errors?.maxlength">
+      <div *ngIf="task?.errors?.maxlength">
         Task must be at most 200 characters long.
       </div>
     </div>
     <br>
     <label for="due_new">Due Date: </label>
     <input class="form-control" id="due_new" type="date" formControlName="due">
-    <div *ngIf="newTodoForm.value.due.invalid" class="alert">
-      <div *ngIf="newTodoForm.value.due.errors?.required">
+    <div *ngIf="due?.invalid" class="alert alert-danger">
+      <div *ngIf="due?.errors?.required">
         Due Date is required.
       </div>
-      <div *ngIf="newTodoForm.value.due.errors?.futureDate">
+      <div *ngIf="due?.errors?.futureDate">
         Due Date must be today or later.
       </div>
     </div>
     <br>
-    <label for="status_new">Completed: </label>
-    <input class="form-control" id="status_new" type="checkbox" formControlName="isdone">
+    <label  class="form-check-label" for="status_update">Done: </label>
+    <input class="form-check-input-reverse ms-2" [attr.disabled]="true" 
+            id="status_update" type="checkbox" formControlName="isdone">      
     <br>
-    <button class="btn btn-primary" type="submit">Add Todo</button>
+    <button class="btn btn-primary mt-3" type="submit">Add Todo</button>
   </form>
   
