--- a/frontend-angular/src/app/app.component.html
+++ b/frontend-angular/src/app/app.component.html
@@ -1,12 +1,33 @@
 <header>
   <nav class="container-fluid navbar navbar-expand navbar-dark bg-dark" style="overflow:visible;">
     <a href="#" class="navbar-brand">Angular ToDo</a>
-    <div class="navbar-nav mr-auto">
+    <div class="navbar-nav me-auto">
       <li class="nav-item">
         <a routerLink="todos" class="nav-link">List All</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="showAddLink">
         <a routerLink="add" class="nav-link">Add</a>
+      </li>
+      <li class="nav-item" *ngIf="showAdminLink">
+        <a routerLink="admin" class="nav-link">Admin</a>
+      </li>
+    </div>
+    
+    <div class="navbar-nav ms-auto" *ngIf="!isLoggedIn">
+      <li class="nav-item">
+        <a href="/register" class="nav-link" routerLink="register">Register</a>
+      </li>
+      <li class="nav-item">
+        <a href="/login" class="nav-link" routerLink="login">Login</a>
+      </li>
+    </div>
+
+    <div class="navbar-nav ms-auto" *ngIf="isLoggedIn">
+      <li class="nav-item">
+        <a href="/profile" class="nav-link" routerLink="profile">{{ username }}</a>
+      </li>
+      <li class="nav-item">
+        <a href class="nav-link" (click)="logout()">LogOut</a>
       </li>
     </div>
   </nav>
